merge tool replacement
Signed-off-by: mereolog <pawel.garbacz@makolab.com>